@@ -922,7 +922,7 @@ ItemOBJ = [
 ,[899,2,999,115,3,0,0,80,"Gladiator Blade (Valorous)","",0,194,1,1,1,5,1,37,75,307,20,0]
 ,[900,2,999,115,3,0,0,80,"Gladiator Blade (Brave)","",0,194,1,1,1,5,1,37,75,89,10,0]
 ,[901,3,999,200,3,0,0,80,"Assaulter's Katzbalger (Valorous)","",0,194,1,1,2,37,55,307,20,0]
-,[902,3,999,200,3,0,0,80,"Assaulter's Katzbalger (Brave)","",0,194,1,10,20,37,55,70,20,0]
+,[902,3,0,230,3,0,0,80,"Brave Assaulter's Katzbalger","","2% chance on physical attacks to cast [Concentration] or [Aura Blade] Lv 1 or highest level learned",1,2,37,80,307,20,194,1,0]
 ,[903,4,0,60,3,0,0,80,"Assaulter Spear","","<b>[Crusader or Paladin]</b><br>Increases attack speed by 20%",1,2,37,95,307,20,194,1,0]
 ,[904,5,999,160,3,0,0,80,"Assaulter Lance","",0,194,1,1,2,37,25,187,1,0]
 ,[905,7,999,200,3,0,0,80,"Insane Battle Axe (Valorous)","",0,194,1,1,3,37,55,307,20,0]
@@ -934,9 +934,9 @@ ItemOBJ = [
 ,[911,12,999,90,3,0,0,80,"Battle Strategy Book (Brave)","",0,194,1,1,2,4,1,89,15,37,75,307,20,0]
 ,[912,12,999,90,3,0,0,80,"Battle Strategy Book (Valorous)","",0,194,1,1,1,4,2,89,15,317,25,0]
 ,[913,10,999,100,3,0,0,80,"Battle Crossbow (Valorous)","",0,194,1,5,2,37,55,307,20,0]
-,[914,10,999,100,3,0,0,80,"Battle Crossbow (Brave)","",0,194,1,5,2,4,10,37,55,0]
+,[914,10,0,100,3,0,0,80,"Brave Battle CrossBow","","2% chance on normal or skill attack to activate ASPD + 15% for 20 seconds<br>Reduces SP consumption of skills by 10%",5,2,4,10,37,55,194,1,0]
 ,[915,13,999,30,3,0,0,80,"Battle Fist (Valorous)","",0,194,1,1,2,2,1,37,95,307,20,0]
-,[916,13,999,30,3,0,0,80,"Battle Fist (Brave)","","When attacking, there is a chance to activate for 6 seconds an effect that completely negates the cast time on Guillotine Fist",194,1,1,2,4,1,37,95,7197,25,7321,25,0]
+,[916,13,0,30,3,0,0,80,"Brave Battle Fist","","When attacking, there is a chance to activate for 6 seconds an effect that completely negates the cast time on Guillotine Fist<br>When casting [Critical Explosion], 10% to also cast [Dangerous Soul Collect]",1,2,4,3,37,95,7197,25,7321,25,0]
 ,[917,9,999,70,3,0,0,80,"Warlock's Magic Wand","","Adds a 5% chance to Stun opponents with your magic",194,1,89,15,4,4,5,3,317,25,0]
 ,[918,9,999,70,3,0,0,80,"Warlock's Battle Wand","","Adds a 5% chance to Stun opponents with your magic",194,1,89,15,4,3,5,3,177,15,0]
 ,[919,9,999,70,3,0,0,80,"Strong Recovery Wand","","Recover 5SP every 10 seconds",194,1,89,15,91,14,94,14,0]
@@ -944,7 +944,7 @@ ItemOBJ = [
 ,[921,14,999,50,3,0,0,80,"Battlefield Guitar (Valorous)","",0,194,1,5,2,37,95,307,20,0]
 ,[922,14,999,50,3,0,0,80,"Battlefield Guitar (Brave)","",0,194,1,5,2,37,95,5292,20,0]
 ,[923,15,999,50,3,0,0,80,"Battle Lariat (Valorous)","",0,194,1,5,2,37,95,307,20,0]
-,[924,15,999,50,3,0,0,80,"Battle Lariat (Brave)","",0,194,1,5,2,37,95,5292,20,0]
+,[924,15,0,50,3,0,0,80,"Brave Battle Lariat","",0,5,2,37,95,5292,20,194,1,0]
 ,[925,17,999,70,3,0,0,80,"Soldier Revolver","","When attacking, there is a 1% chance that for 3 seconds your ASPD will increase by 100%",194,1,5,2,8,-10,37,55,307,20,0]
 ,[926,18,999,50,3,0,0,80,"Soldier Rifle","",0,194,1,5,2,8,10,10,10,37,75,307,20,7430,25,0]
 ,[927,20,999,80,3,0,0,80,"Soldier Gatling Gun","","When attacking, there is a 1% chance that for 6 seconds you gain ATK +80, but drains 120HP per seconds",194,1,5,2,37,35,307,20,0]
@@ -2649,8 +2649,8 @@ ItemID = [
 ,[898,1,13037]
 ,[899,1,13410]
 ,[900,1,13411]
-,[901,1,1183]
-,[902,1,1184]
+,[901,1,1184]
+,[902,1,1183]
 ,[903,1,1425]
 ,[904,1,1482]
 ,[905,1,1379]
